--- a/DHL/01. 문제풀이 현황.md
+++ b/DHL/01. 문제풀이 현황.md
@@ -2,6 +2,9 @@
 01. 완주하지 못한 선수 (o) - 2021.09.07
 02. 전화번호 목록 (o) - 2021.09.08
 03. 위장 (o) - 2021.09.09
-04. 베스트앨범 (x)
+04. 베스트앨범 (x) - 2021.10.21 (x)
+
+#### 02. stack
+01. 기능 개발 (o) - 2021.10.21 
 
 
