Update 01. 문제풀이 현황.md

--- a/DHL/01. 문제풀이 현황.md
+++ b/DHL/01. 문제풀이 현황.md
@@ -3,8 +3,11 @@
 02. 전화번호 목록 (o) - 2021.09.08
 03. 위장 (o) - 2021.09.09
 04. 베스트앨범 (x) - 2021.10.21 (x)
+   - 못푼 사유: map에 대한 이해도 부족으로인해 풀지못함 아직도 stl에 대한 것을 검색했음 map이라는 자료구조에 대한 이해와 c++ stl을 제대로 활용하지 못함
+   - 다음에 다시 풀이해보길 요망 + unorded_map / map stl 정리 + map 자료구조이해
 
 #### 02. stack
 01. 기능 개발 (o) - 2021.10.21 
+02. 프린터 (o) - 2021.10.21
 
 
